[gd_scene load_steps=18 format=3 uid="uid://b6crr5p0l7b6r"]

[ext_resource type="Script" path="res://Scripts/Escena principal.gd" id="1_h3yut"]
[ext_resource type="Texture2D" uid="uid://dmbwxm0gim8uc" path="res://Recursos/Tilemaps/59894.png" id="1_ryu7r"]
[ext_resource type="PackedScene" uid="uid://bx4nlu06uhgrv" path="res://Escenes/obstacles.tscn" id="2_2vn5b"]
[ext_resource type="Texture2D" uid="uid://cdqtgjttec2b3" path="res://Recursos/Tilemaps/598942.png" id="2_rb4e0"]
[ext_resource type="Script" path="res://Scripts/Terra.gd" id="3_dgktr"]
[ext_resource type="Texture2D" uid="uid://coa2h52ejspmb" path="res://icon.svg" id="5_ul0xr"]
[ext_resource type="PackedScene" uid="uid://7je0l4k3i20b" path="res://Escenes/Personatge.tscn" id="6_pbbl2"]
[ext_resource type="FontFile" uid="uid://cs11ai2xuag05" path="res://Recursos/flappy-font.ttf" id="8_3tsa3"]
[ext_resource type="Texture2D" uid="uid://nvq3j6kv7vjk" path="res://Recursos/Tilemaps/SPRITES.webp" id="9_4w6is"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_07mwj"]
size = Vector2(2997.5, 52.7968)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l4jef"]
size = Vector2(4499, 85.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3di7y"]
size = Vector2(324.964, 502.031)

[sub_resource type="GDScript" id="GDScript_ayayr"]
script/source = "extends Node




func _ready():
	pass

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta):
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wopf7"]
size = Vector2(31, 391)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b1laq"]
size = Vector2(20, 486)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kh3bp"]
size = Vector2(325, 80)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lin5l"]
size = Vector2(88, 20)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_h3yut")
escena_obstacle = ExtResource("2_2vn5b")

[node name="fondo" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(160.005, 240)
scale = Vector2(2.23776, 1.88235)
texture = ExtResource("1_ryu7r")
region_enabled = true
region_rect = Rect2(0.100723, -0.0463715, 143.753, 255.855)

[node name="Obstacles" type="Sprite2D" parent="."]
position = Vector2(386, 207)
scale = Vector2(0.907, 1)
texture = ExtResource("5_ul0xr")

[node name="Timer" type="Timer" parent="Obstacles"]
wait_time = 1.6

[node name="terra" type="Area2D" parent="."]
light_mask = 2
visibility_layer = 2
position = Vector2(160.005, 240)
scale = Vector2(2.23776, 1.88235)
collision_layer = 4
collision_mask = 22
script = ExtResource("3_dgktr")
velocitat = 2.3

[node name="Terra" type="Sprite2D" parent="terra"]
texture_filter = 1
texture_repeat = 2
position = Vector2(932, 106)
scale = Vector2(0.670312, 0.830343)
texture = ExtResource("2_rb4e0")
region_enabled = true
region_rect = Rect2(-68.035, -0.237, 3000, 55.886)

[node name="Area2D" type="Area2D" parent="terra/Terra"]
visible = false
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="terra/Terra/Area2D"]
visible = false
position = Vector2(-2, 0.783966)
shape = SubResource("RectangleShape2D_07mwj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="terra"]
position = Vector2(932.18, 106.25)
scale = Vector2(0.446875, 0.531249)
shape = SubResource("RectangleShape2D_l4jef")

[node name="rotacio" type="Area2D" parent="."]
position = Vector2(160.005, 240)
scale = Vector2(2.23776, 1.88235)
collision_layer = 16
collision_mask = 20

[node name="Sprite2D" type="Sprite2D" parent="rotacio"]
texture_filter = 1
texture_repeat = 2
position = Vector2(-572.449, 119.531)
scale = Vector2(0.671176, 3.90565)
texture = ExtResource("5_ul0xr")
region_enabled = true
region_rect = Rect2(-0.947281, -0.157837, 129.829, 128.29)

[node name="CollisionShape2D" type="CollisionShape2D" parent="rotacio"]
position = Vector2(-691.318, 117.406)
shape = SubResource("RectangleShape2D_3di7y")

[node name="CharacterBody2D" parent="." instance=ExtResource("6_pbbl2")]
position = Vector2(62, 187)
scale = Vector2(2.5, 2.5)

[node name="configuracio" type="Node" parent="."]
script = SubResource("GDScript_ayayr")

[node name="puntuacio" type="Area2D" parent="."]
collision_layer = 32
collision_mask = 40

[node name="CollisionShape2D" type="CollisionShape2D" parent="puntuacio"]
position = Vector2(57.5, 197.5)
shape = SubResource("RectangleShape2D_wopf7")

[node name="Obsacles_eliminar" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 72

[node name="CollisionShape2D" type="CollisionShape2D" parent="Obsacles_eliminar"]
position = Vector2(-92, 243)
shape = SubResource("RectangleShape2D_b1laq")

[node name="terra2" type="StaticBody2D" parent="."]
collision_layer = 128
collision_mask = 130

[node name="CollisionShape2D" type="CollisionShape2D" parent="terra2"]
position = Vector2(158.5, 443)
shape = SubResource("RectangleShape2D_kh3bp")

[node name="clicar" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(163, 243)
scale = Vector2(2.4428, 2.42161)
texture = ExtResource("1_ryu7r")
region_enabled = true
region_rect = Rect2(291, 81, 59, 59)

[node name="clicar2" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(163, 114)
scale = Vector2(2.4428, 2.42161)
texture = ExtResource("1_ryu7r")
region_enabled = true
region_rect = Rect2(292, 58, 99, 27)

[node name="volar_principi" type="StaticBody2D" parent="."]
collision_layer = 128
collision_mask = 130

[node name="CollisionShape2D" type="CollisionShape2D" parent="volar_principi"]
position = Vector2(64, 211)
shape = SubResource("RectangleShape2D_lin5l")

[node name="Contador" type="Label" parent="."]
texture_filter = 1
offset_left = 123.0
offset_top = 10.0
offset_right = 193.0
offset_bottom = 61.0
theme_override_fonts/font = ExtResource("8_3tsa3")
theme_override_font_sizes/font_size = 26
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="resultat" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(161.375, 217.594)
scale = Vector2(1.94181, 2.1834)
texture = ExtResource("9_4w6is")
region_enabled = true
region_rect = Rect2(145, 57, 116, 61)

[node name="resultat" type="Sprite2D" parent="resultat"]
texture_filter = 1
position = Vector2(-0.708101, -42.408)
texture = ExtResource("9_4w6is")
region_enabled = true
region_rect = Rect2(145, 197, 96, 23)

[node name="resultat2" type="Sprite2D" parent="resultat"]
texture_filter = 1
position = Vector2(0, 39.116)
texture = ExtResource("9_4w6is")
region_enabled = true
region_rect = Rect2(246, 133, 41, 16)

[node name="Button" type="Button" parent="resultat/resultat2"]
offset_left = -20.0
offset_top = -7.0
offset_right = 20.0
offset_bottom = 7.0
flat = true

[node name="Contador2" type="Label" parent="."]
texture_filter = 1
offset_left = 198.0
offset_top = 177.0
offset_right = 268.0
offset_bottom = 228.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_3tsa3")
theme_override_font_sizes/font_size = 26
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="maxim" type="Label" parent="."]
texture_filter = 1
offset_left = 197.0
offset_top = 225.0
offset_right = 267.0
offset_bottom = 276.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("8_3tsa3")
theme_override_font_sizes/font_size = 26
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="timeout" from="Obstacles/Timer" to="." method="_on_timer_timeout"]
[connection signal="body_entered" from="terra" to="terra" method="_on_body_entered"]
[connection signal="area_entered" from="rotacio" to="terra" method="_on_rotacio_area_entered"]
[connection signal="area_entered" from="puntuacio" to="." method="_on_puntuacio_area_entered"]
[connection signal="area_exited" from="puntuacio" to="." method="_on_puntuacio_area_exited"]
[connection signal="area_entered" from="Obsacles_eliminar" to="." method="_on_obsacles_eliminar_area_entered"]
[connection signal="pressed" from="resultat/resultat2/Button" to="." method="_on_button_pressed"]
